@@ -679,6 +679,18 @@ attribute_def job_attr_def[] = {
 	ATR_TYPE_LONG,
 	PARENT_TYPE_JOB
     },
+/* JOB_ATR_exitstat */
+    {	ATTR_exitstat,		/* "exit_status" */
+	decode_l,
+	encode_l,
+	set_l,
+	comp_l,
+	free_null,
+	NULL_FUNC,
+	READ_ONLY,
+	ATR_TYPE_LONG,
+	PARENT_TYPE_JOB
+    },
 	
 /* Site defined attributes if any, see site_job_attr_*.h  */
 #include "site_job_attr_def.h"
